[gd_scene format=3 uid="uid://bnhismy4o74yd"]

[ext_resource type="Script" uid="uid://bgwe6ly6bb5mn" path="res://Modules/Interaction/Computer/Email App/email_tab.gd" id="1_svogu"]

[node name="Email Tab" type="Control" unique_id=718460647]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_svogu")

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=1373029536]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EmailButtons" type="VBoxContainer" parent="HBoxContainer" unique_id=1920983665]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer" unique_id=1087759084]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="EmailResizer" type="Control" parent="HBoxContainer/ScrollContainer" unique_id=193311857]
custom_minimum_size = Vector2(0, 2500)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EmailViewer" type="TextureRect" parent="HBoxContainer/ScrollContainer/EmailResizer" unique_id=582530609]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 4
